<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".Politica_de_Privacidad">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView

                android:text="Política de Privacidad"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:layout_marginTop="30dp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView

                android:layout_marginTop="30dp"
                android:text="Privacidad"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/politica_privacidad"
                />

            <TextView
                android:text="Políticas de Privacidad"
                android:layout_marginTop="30dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/politica_texto2"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/politica_texto3"
                />


        </LinearLayout>

    </ScrollView>

</LinearLayout>